# scandocx

./: .gitignore  README.md  bad.rep  bad.rep.json  bad.txt  gui_client.py  precheck_runner.py  pyproject.toml  service.py  terms.csv  yadovity.rep  yadovity.rep.json  yadovity.txt
gost_precheck/: cli.py  service.py
gost_precheck/config/: brands.json  gost34.json  settings.json
gost_precheck/config_full/: abbr.json  ignore_patterns.json  settings.json
gost_precheck/config_full/dicts/: freq_ru.txt  pwl_ru.txt
gost_precheck/core/: config.py  constants.py  engine.py  issue.py  loader.py  regexes.py  reporting.py  terms.py  utils.py  watcher.py
gost_precheck/core/checks/: abbr.py  brands.py  captions.py  gost34.py  post_normalize.py  punctuation.py  spell.py  spell_multi.py  whitespace.py  ws_word_digit.py
